<resources>
    <string name="app_name">Parolymplus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_form">Form</string>
    <string name="menu_list">List</string>
    <string name="menu_detail">Detail</string>

    <string name="button_addExercise">Add Exercise</string>
    <string name="hint_Title">Exercise Title</string>
    <string name="hint_Set">Exercise Set</string>
    <string name="hint_Duration">Exercise Duration</string>
    <string name="menu_addExercise">Add</string>
    <string name="menu_cancelExercise">Cancel</string>
    <string name="enter_exercise_title"> Please enter a Exercise Title </string>
    <string name="save_exercise"> Save Exercise </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_exercise_image">Select exercise image</string>
    <string name="change_exercise_image">Change exercise image</string>
    <string name="menu_deleteExercise">Delete</string>

    <string name="action_form">Form</string>
    <string name="action_list">List</string>

    <string name="exercisesNotFound">No Exercises Yet...\nGo Make an Exercise!</string>
    <string name="exerciseError">Error : Couldn\'t Make an Exercise...</string>

    <string name="ExerciseDetails">Exercise Details</string>
    <string name="title">Title :</string>
    <string name="set">Set :</string>
    <string name="duration">Duration :</string>

    <string name="messageLoading">Please Wait while your exercises are Loading...</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select_profile_image">Select Profile Image</string>
</resources>